[gd_scene load_steps=10 format=3 uid="uid://c4p6ldvfdioho"]

[ext_resource type="Script" path="res://scripts/player_ui.gd" id="1_e3uo4"]
[ext_resource type="Script" path="res://scripts/timer.gd" id="2_o32dr"]
[ext_resource type="Script" path="res://scripts/points_ui.gd" id="3_f4kss"]
[ext_resource type="Script" path="res://scripts/water_bars_ui.gd" id="4_u2l3y"]
[ext_resource type="Script" path="res://scripts/ammo_panel_ui.gd" id="5_m6bhq"]
[ext_resource type="Texture2D" uid="uid://dkabu7bj24wwm" path="res://assets/UI/Magazine UI.png" id="5_x82tv"]
[ext_resource type="Texture2D" uid="uid://b8aimspfiume" path="res://assets/UI/Shotgun Shells UI.png" id="6_uplld"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_605kr"]
bg_color = Color(2.40654e-07, 0.646853, 0.127014, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_66koy"]
bg_color = Color(5.77569e-07, 0.642912, 0.925276, 1)

[node name="PlayerUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_e3uo4")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="InteractableTooltip" type="Panel" parent="CanvasLayer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -218.0
offset_top = -84.0
offset_right = 219.0
offset_bottom = -44.0
grow_horizontal = 2
grow_vertical = 0

[node name="Label" type="Label" parent="CanvasLayer/InteractableTooltip"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Hold E to water plant"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Timer" type="Panel" parent="CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -84.0
offset_bottom = 38.0
grow_horizontal = 0
script = ExtResource("2_o32dr")

[node name="Label" type="Label" parent="CanvasLayer/Timer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 18
text = "00:00:00 "
horizontal_alignment = 2
vertical_alignment = 1

[node name="Points" type="Panel" parent="CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -195.0
offset_top = 45.0
offset_right = -1.0
offset_bottom = 73.0
grow_horizontal = 0
script = ExtResource("3_f4kss")

[node name="Label" type="Label" parent="CanvasLayer/Points"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 14
text = "  Joe Bucks $0"
vertical_alignment = 1

[node name="HealthBar" type="ProgressBar" parent="CanvasLayer"]
offset_right = 393.0
offset_bottom = 27.0
theme_override_styles/fill = SubResource("StyleBoxFlat_605kr")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -118.0
offset_top = -136.0
grow_horizontal = 0
grow_vertical = 0

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 15
text = "WASD - Move "
horizontal_alignment = 2

[node name="Label2" type="Label" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 15
text = "RMB - Aim "
horizontal_alignment = 2

[node name="Label3" type="Label" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 15
text = "LMB - Shoot "
horizontal_alignment = 2

[node name="Label4" type="Label" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 15
text = "E - Interact "
horizontal_alignment = 2

[node name="Label5" type="Label" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 15
text = "R - Reload "
horizontal_alignment = 2

[node name="Label6" type="Label" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 15
text = "1 - Primary Weapon "
horizontal_alignment = 2

[node name="Label7" type="Label" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 15
text = "2 - Secondary Weapon "
horizontal_alignment = 2

[node name="WaterBarsUI" type="VBoxContainer" parent="CanvasLayer"]
offset_left = 4.0
offset_top = 38.0
offset_right = 238.0
offset_bottom = 97.0
script = ExtResource("4_u2l3y")

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/WaterBarsUI"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/WaterBarsUI/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "Entry-Way Plant"

[node name="ProgressBar" type="ProgressBar" parent="CanvasLayer/WaterBarsUI/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_font_sizes/font_size = 10
theme_override_styles/fill = SubResource("StyleBoxFlat_66koy")
show_percentage = false

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/WaterBarsUI"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/WaterBarsUI/HBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "Kitchen Plant     "

[node name="ProgressBar" type="ProgressBar" parent="CanvasLayer/WaterBarsUI/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_font_sizes/font_size = 10
theme_override_styles/fill = SubResource("StyleBoxFlat_66koy")
show_percentage = false

[node name="HBoxContainer3" type="HBoxContainer" parent="CanvasLayer/WaterBarsUI"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/WaterBarsUI/HBoxContainer3"]
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "Patio Plant         "

[node name="ProgressBar" type="ProgressBar" parent="CanvasLayer/WaterBarsUI/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_font_sizes/font_size = 10
theme_override_styles/fill = SubResource("StyleBoxFlat_66koy")
show_percentage = false

[node name="AmmoPanelUI" type="Panel" parent="CanvasLayer"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -70.0
offset_right = 291.0
grow_vertical = 0
script = ExtResource("5_m6bhq")

[node name="WeaponName" type="Label" parent="CanvasLayer/AmmoPanelUI"]
layout_mode = 0
offset_left = 5.0
offset_right = 152.0
offset_bottom = 23.0
text = " Pistol"

[node name="MagazineUi" type="Sprite2D" parent="CanvasLayer/AmmoPanelUI"]
position = Vector2(196, 35)
scale = Vector2(0.0558334, 0.0558334)
texture = ExtResource("5_x82tv")

[node name="ShotgunShellsUi" type="Sprite2D" parent="CanvasLayer/AmmoPanelUI"]
position = Vector2(196, 35)
scale = Vector2(0.0916667, 0.0916667)
texture = ExtResource("6_uplld")

[node name="AmmoCount" type="Label" parent="CanvasLayer/AmmoPanelUI"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -70.0
offset_top = -18.0
offset_right = -4.0
offset_bottom = 20.0
grow_horizontal = 0
grow_vertical = 2
text = "X 100"
horizontal_alignment = 1
vertical_alignment = 1
